fix horizontal scroll on small screens
hidden data-tooltip text on "+/-" column in leaderboard to be >100% and
therefore horizontal scrolling.

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -35,14 +35,14 @@ body {
 	color: var(--fg);
 
 	font-family: "IBM Plex Sans", sans-serif;
-	height: 100%;
-	max-width: 760px;
-	margin: 0 auto;
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
+
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	min-height: 100vh;
-	padding: 5px;
+	justify-content: top;
+	align-items: center;
 }
 
 h1, h2, h3, h4 {
@@ -111,14 +111,16 @@ input {
 }
 
 header {
-	margin: 10px 15px 48px 15px;
+	width: 100%;
+	max-width: 720px;
+	margin: 16px 0 36px 0;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
 	header {
 		flex-direction: column;
 		row-gap: 10px;
@@ -132,17 +134,23 @@ nav {
 }
 
 main {
-	flex: 1;
-	padding: 3px;
+	flex-grow: 1;
+	width: calc(100% - 16px);
+	max-width: 720px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: top;
 }
 
 footer {
+	width: 100%;
+	height: 100px;
 	display: flex;
 	flex-direction: row;
 	column-gap: 40px;
 	justify-content: center;
 	align-items: center;
-	min-height: 100px;
 }
 
 nav a, footer a {
@@ -189,12 +197,17 @@ table {
     position: absolute;
     opacity: 0;
 
-    /* customizable */
+	/* customizable */
+    background: var(--bg);
+	border: 1px solid var(--border);
+    margin-top: 28px;
+    margin-left: 18px;
 	font-size: 0.9rem;
 	font-weight: normal;
-    padding: 8px;
+	padding: 8px;
     border-radius: var(--radius);
 	box-shadow: 0px 12px 12px -7px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 
 [data-tooltip]:hover::before {
@@ -202,12 +215,7 @@ table {
     opacity: 1;
 
     /* customizable */
-    background: var(--bg);
-	border: 1px solid var(--border);
-    margin-top: 28px;
-    margin-left: 18px;
     transition: opacity 0.02s ease 1s;
-	z-index: 1;
 }
 
 [data-tooltip]:not([data-tooltip-persistent])::before {
